
[project]
name = "red_config"
version = "0.1.0"
description = "My custom configuration library. This is for my personal use, it will be maintained as I decide to spend time on it. I wouldn't use this in your own projects."
authors = [
    {name = "redjax", email = "none@none.com"},
]
dependencies = [
    "pydantic>=2.0.3",
    "pydantic-settings>=2.0.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.urls]
Repository = "https://github.com/redjax/red-config"

[tool.pdm.scripts]

## Format scripts
# Check only, don't fix
check = {cmd = "black ."}
#  Check and fix
format = {cmd = "ruff check . --fix"}

## Start scripts
#  Run main app or script. Launches from app/
start = { shell = "cd app && pdm run python main.py"}

## Export requirement scripts
#  Export production requirements
export = {cmd = "pdm export --prod -o requirements.txt --without-hashes"}
#  Export only development requirements
export-dev = {cmd = "pdm export -d -o requirements.dev.txt --without-hashes"}
## Uncomment if/when using a CI group
# export-ci = {cmd = "pdm export -G ci -o requirements.ci.txt --without-hashes"}
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
    "ruff>=0.0.278",
    "pytest>=7.4.0",
]

[python]
## https://stackoverflow.com/a/70958111
PYTHON_KEYRING_BACKEND="keyring.backends.null.Keyring"
